trunk/Archive2/c1/fa86a81d950e63/output
main.cpp: In function 'std::ostream& operator<<(std::ostream&, const std::vector<_RealType>&)':
main.cpp:11:5: error: 'ostr' was not declared in this scope
     ostr << "vector[" << size << "] ";
     ^
